apps/insurance/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend
  namespace: insurance-sandbox
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik

  tls:
    - hosts:
        - insurance.51.159.207.81.nip.io
      secretName: insurance-tls

  rules:
    - host: insurance.51.159.207.81.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
